# Bampy

./: .gitignore  ;  README.md  flake.nix  package.json  pnpm-lock.yaml  vite.config.ts
.github/: dependabot.yml
bampy/: Cargo.toml
bampy/src/: lib.rs  result.rs  util.rs
bampy/src/slicer/: axis.rs  base_slices.rs  line.rs  mesh.rs  mod.rs  sdf.rs  slice_path.rs  slice_rings.rs  split_surface.rs  trace_surface.rs  triangle.rs  z_projection.rs
src/: polyfill-types.d.ts  polyfills.ts
src/lib/components/: App.svelte  Scene.svelte
src/lib/slicer/: newFile.ts  slicer.ts  worker-data.ts  worker.ts
src/lib/slicer/steps/: extract-layers.ts  extract-surfaces.ts  slice.ts
src/lib/slicer/util/: equals.ts
src/lib/style/: global.scss
src/routes/: +layout.svelte  +layout.ts
