[package]
name = "bampy"
version = "0.1.0"
authors = ["Thea Schöbl <dev@theaninova.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
bvh = "0.9.0"
nalgebra = "0.33.0"
num = "0.4.1"
approx = "0.5.1"
serde = "1.0.197"
tsify = { version = "0.4.5", features = ["js"] }

[dependencies.getrandom]
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
